# noa-client

./: README.md  pyproject.toml  requirements.txt
examples/analog_out/: design_1.hwh  example.py
examples/daq/: design_1.hwh  example.py
examples/digital_io/: design_1.hwh  example.py
examples/registers/: design_1.hwh  example.py
examples/stream_in/: design_1.hwh  example.py
noa/: analog_out.py  daq.py  digital_io.py  noa.py  stream_in.py  typecast.py
scripts/: daq_test.sh
